--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="background_image">Imagen de fondo</string>
     <string name="logo_app">Logo de la aplicación</string>
     <string name="loading">Cargando</string>
-
+    <string name="volver">Volver</string>
 </resources>
